[gd_scene load_steps=16 format=3 uid="uid://bmblv1y3xxdmi"]

[ext_resource type="Script" uid="uid://bx7q1bslib7jp" path="res://src/ui/main_menu.gd" id="1_qoywa"]
[ext_resource type="FontFile" uid="uid://bdpp3kapmnxd4" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="2_f0s2b"]
[ext_resource type="Texture2D" uid="uid://cbxfte8wfk7sh" path="res://assets/sprites/background.png" id="2_ljhhu"]
[ext_resource type="FontFile" uid="uid://rcf8py33vxyi" path="res://assets/fonts/PixelOperator8.ttf" id="3_f0s2b"]
[ext_resource type="Script" uid="uid://r1itil0ctj7f" path="res://src/audio/volume_slider.gd" id="4_5mgu5"]
[ext_resource type="StyleBox" uid="uid://bwc4rmmkhf126" path="res://assets/themes/focus.tres" id="4_35tjg"]
[ext_resource type="Script" uid="uid://k1p7jahhqcdc" path="res://src/ui/fullscreen_control.gd" id="5_h03rr"]
[ext_resource type="StyleBox" uid="uid://v2bmtpbhyi2t" path="res://assets/themes/hover.tres" id="5_vob5f"]
[ext_resource type="StyleBox" uid="uid://dnxtvybveond6" path="res://assets/themes/pressed.tres" id="6_0prml"]
[ext_resource type="StyleBox" uid="uid://da006kpa123cw" path="res://assets/themes/normal.tres" id="7_yipxn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_35tjg"]
texture = ExtResource("2_ljhhu")
modulate_color = Color(0.408329, 0.408329, 0.408329, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h03rr"]
bg_color = Color(0.169245, 0.169245, 0.169245, 0.847059)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_qoywa"]
color = Color(1, 1, 1, 1)
thickness = 6

[sub_resource type="StyleBoxLine" id="StyleBoxLine_f0s2b"]
color = Color(0.346187, 0.547705, 1, 1)
thickness = 6

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vob5f"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qoywa")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_35tjg")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -341.0
offset_top = -233.0
offset_right = 341.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 48
text = "Hero Knight Adventure"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.0
offset_top = -85.0
offset_right = 136.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Play" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("4_35tjg")
theme_override_styles/hover = ExtResource("5_vob5f")
theme_override_styles/pressed = ExtResource("6_0prml")
theme_override_styles/normal = ExtResource("7_yipxn")
text = "Play"

[node name="Option" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("4_35tjg")
theme_override_styles/hover = ExtResource("5_vob5f")
theme_override_styles/pressed = ExtResource("6_0prml")
theme_override_styles/normal = ExtResource("7_yipxn")
text = "Options"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("4_35tjg")
theme_override_styles/hover = ExtResource("5_vob5f")
theme_override_styles/pressed = ExtResource("6_0prml")
theme_override_styles/normal = ExtResource("7_yipxn")
text = "Quit"

[node name="OptionMenu" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -140.0
offset_right = 256.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h03rr")

[node name="Options" type="Label" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 35
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -64.5
offset_top = -75.0
offset_right = 65.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 20

[node name="Back" type="Button" parent="OptionMenu/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_f0s2b")
theme_override_font_sizes/font_size = 25
theme_override_styles/focus = ExtResource("4_35tjg")
theme_override_styles/hover = ExtResource("5_vob5f")
theme_override_styles/pressed = ExtResource("6_0prml")
theme_override_styles/normal = ExtResource("7_yipxn")
text = "Back"

[node name="GridContainer2" type="GridContainer" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -92.5
offset_right = 160.5
offset_bottom = -12.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 15
columns = 2

[node name="Master" type="Label" parent="OptionMenu/GridContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_f0s2b")
theme_override_font_sizes/font_size = 16
text = "Master"

[node name="MasterSlider" type="HSlider" parent="OptionMenu/GridContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/center_grabber = 1
theme_override_styles/slider = SubResource("StyleBoxLine_qoywa")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_f0s2b")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_f0s2b")
max_value = 1.0
step = 0.001
script = ExtResource("4_5mgu5")
bus_name = "Master"

[node name="Music" type="Label" parent="OptionMenu/GridContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_f0s2b")
theme_override_font_sizes/font_size = 16
text = "Music"

[node name="MusicSlider" type="HSlider" parent="OptionMenu/GridContainer2"]
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/center_grabber = 1
theme_override_styles/slider = SubResource("StyleBoxLine_qoywa")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_f0s2b")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_f0s2b")
max_value = 1.0
step = 0.001
script = ExtResource("4_5mgu5")
bus_name = "Music"

[node name="SFX" type="Label" parent="OptionMenu/GridContainer2"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_f0s2b")
theme_override_font_sizes/font_size = 16
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="OptionMenu/GridContainer2"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_constants/center_grabber = 1
theme_override_styles/slider = SubResource("StyleBoxLine_qoywa")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_f0s2b")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_f0s2b")
max_value = 1.0
step = 0.001
script = ExtResource("4_5mgu5")
bus_name = "SFX"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -83.0
offset_top = 27.5
offset_right = 83.0
offset_bottom = 67.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Master" type="Label" parent="OptionMenu/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_f0s2b")
theme_override_font_sizes/font_size = 16
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="OptionMenu/HBoxContainer"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_vob5f")
script = ExtResource("5_h03rr")

[connection signal="pressed" from="MainButtons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainButtons/Option" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="OptionMenu/MarginContainer/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="OptionMenu/GridContainer2/MasterSlider" to="OptionMenu/GridContainer2/MasterSlider" method="_on_value_changed"]
[connection signal="value_changed" from="OptionMenu/GridContainer2/MusicSlider" to="OptionMenu/GridContainer2/MusicSlider" method="_on_value_changed"]
[connection signal="value_changed" from="OptionMenu/GridContainer2/SFXSlider" to="OptionMenu/GridContainer2/SFXSlider" method="_on_value_changed"]
[connection signal="toggled" from="OptionMenu/HBoxContainer/CheckBox" to="OptionMenu/HBoxContainer/CheckBox" method="_on_toggled"]
